--- a/front/src/app/components/login/login.component.scss
+++ b/front/src/app/components/login/login.component.scss
@@ -1,4 +1,4 @@
-.out-box{
+.out-box {
   width:100%;
   height: 100vh;
   display: flex;
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 
-.login-div{
+.login-div {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,7 +22,7 @@
   border: 3px solid #076D05;
 }
 
-.login-div-sign{
+.login-div-sign {
   position: absolute;
   width: 369px;
   height: 44px;
@@ -31,10 +31,9 @@
   text-align: center;
 }
 
-.text-box{
+.text-box {
   display: flex;
   flex-direction: column;
-  padding: 0px 10px;
   position: static;
   width: 92%;
   height: 13%;
@@ -44,15 +43,14 @@
   order: 0;
   align-self: stretch;
   flex-grow: 1;
-  padding-bottom: 10px;
+  padding: 0px 10px 10px;
   margin-left: 5px;
   margin-top: 10px;
 }
 
-.button-box{
+.button-box {
   display: flex;
   flex-direction: column;
-  padding: 0px 10px;
   position: static;
   width: 92%;
   height: 13%;
@@ -62,12 +60,12 @@
   order: 0;
   align-self: stretch;
   flex-grow: 1;
-  padding-bottom: 10px;
+  padding: 0px 10px 10px;
   margin-left: 5px;
   margin-top: 20px;
 }
 
-.text-field{
+.text-field {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -87,7 +85,7 @@
   flex-grow: 1;
 }
 
-.profile-set-button{
+.profile-set-button {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -108,20 +106,20 @@
   outline: none;
 }
 
-.green-button{
+.green-button {
   background: #53DE31;
 }
 
-.green-button:hover{
+.green-button:hover {
   background: #076D05;
   color: white;
 }
 
-.yellow-button{
+.yellow-button {
   background: #F7DE05;
 }
 
-.yellow-button:hover{
+.yellow-button:hover {
   background: #DAA622;
   color: white;
 }
