--- a/front/src/app/components/elements/mini-nav-bar/mini-nav-bar.component.html
+++ b/front/src/app/components/elements/mini-nav-bar/mini-nav-bar.component.html
@@ -1,4 +1,4 @@
 <div class="nav-bar">
   <mat-icon class="element" routerLink="/profile">build</mat-icon>
-  <mat-icon class="element" (click)="logout()">power_settings_new</mat-icon>
+  <mat-icon class="element" (click)="logOut()">power_settings_new</mat-icon>
 </div>
