--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -3,7 +3,6 @@
   <div class="login-div">
     <div class="text-box">
       <div>Login:</div>
-<!--      <app-textfield textType="text"></app-textfield>-->
       <label>
         <input [(ngModel)]="login" class="text-field" type="text">
       </label>
@@ -11,14 +10,13 @@
 
     <div class="text-box">
       <div>Password:</div>
-<!--      <app-textfield textType="password"></app-textfield>-->
       <label>
         <input [(ngModel)]="password" class="text-field" type="password">
       </label>
     </div>
 
     <div class="button-box">
-      <button class="profile-set-button green-button" (click)="check_auth()">Log IN</button>
+      <button class="profile-set-button green-button" (click)="checkAuth()">Log IN</button>
       <button class="profile-set-button yellow-button" routerLink="/register">Registration</button>
     </div>
   </div>
